--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="utf-8">
     </head>
     <body>
+    	<h1>作业目录</h1>
     	<a href="十字架.html">十字架</a>
     	<a href="十字架3.html">十字架3</a>
     	<a href="十字架5.html">十字架5</a>
-    	<a href="定位.html">4</a>
-    	<a href="定位练习.html">5</a>
+    	<a href="定位.html">定位练习4</a>
+    	<a href="定位练习.html">定位练习5</a>
     </body>
 </html>
